--- a/src/pages/binnacle/BinnacleMobile/BinnacleScreen/CalendarWeek.css
+++ b/src/pages/binnacle/BinnacleMobile/BinnacleScreen/CalendarWeek.css
@@ -95,7 +95,7 @@
 }
 
 .chakra-ui-dark .is-selected-date {
-  background-color: #171923;
+  background-color: #414556;
 }
 
 .is-today {
@@ -116,7 +116,7 @@
   border-radius: 50%;
   font-weight: 600;
   color: white;
-  background-color: var(--public-holiday-color);
+  background-color: var(--public-holiday-color) !important;
 }
 
 .is-vacation {
@@ -130,5 +130,5 @@
   border-radius: 50%;
   font-weight: 600;
   color: white;
-  background-color: var(--private-holiday-color);
+  background-color: var(--private-holiday-color) !important;
 }
